...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cX0-lK-ee6">
                                <rect key="frame" x="20" y="260" width="560" height="43"/>
                                <constraints>
...
                                <textInputTraits key="textInputTraits" autocapitalizationType="words" autocorrectionType="no" spellCheckingType="no"/>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="zRc-oN-Kad">
                                <rect key="frame" x="20" y="311" width="560" height="43"/>
                                <constraints>
...
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="26"/>
                                <state key="normal" title="I'm picking up food"/>
                                <connections>
                                    <action selector="loginButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="0TG-Be-dbS"/>
...
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="26"/>
                                <state key="normal" title="I want food"/>
                                <connections>
                                    <action selector="loginButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="vpL-tw-cWg"/>
...
                        </variation>
                    </view>
                    <navigationItem key="navigationItem" title="Home" id="10u-XQ-VeS">
                        <barButtonItem key="leftBarButtonItem" title="Settings" id="vQE-Iq-bWC">
                            <connections>
                                <segue destination="o8a-E2-DZA" kind="show" identifier="settings" id="1oD-X7-Zej"/>
...
                                    <constraint firstAttribute="width" constant="322" id="oZV-zs-T6c"/>
                                </constraints>
                                <state key="normal" title="Sign out"/>
                                <variation key="default">
                                    <mask key="constraints">
...
                                    <constraint firstAttribute="width" constant="322" id="p0Q-9p-Q6l"/>
                                </constraints>
                                <state key="normal" title="Submit"/>
                                <variation key="default">
                                    <mask key="constraints">
...
                                    <autoresizingMask key="autoresizingMask"/>
                                    <subviews>
                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="gKJ-P8-IRU">
                                            <rect key="frame" x="15" y="11" width="34" height="20"/>
                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                                    <autoresizingMask key="autoresizingMask"/>
                                    <subviews>
                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Add new food item..." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="UdD-aZ-siZ">
                                            <rect key="frame" x="15" y="0.0" width="570" height="43"/>
                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                    </tableView>
                    <toolbarItems/>
                    <navigationItem key="navigationItem" title="New Order" id="2HZ-eB-W8G">
                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="SgT-GS-E1W">
                            <connections>
...
                                    <autoresizingMask key="autoresizingMask"/>
                                    <subviews>
                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Any driver" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="xup-r5-gMh">
                                            <rect key="frame" x="15" y="0.0" width="570" height="43"/>
                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
        <scene sceneID="o7t-BG-Coc">
            <objects>
                <viewController title="Expires In" id="pyO-EU-ybm" customClass="ExpiresInViewController" customModule="Foodini" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="mLr-ym-mhX"/>
...
        <scene sceneID="NIP-ps-NzL">
            <objects>
                <tableViewController storyboardIdentifier="newFoodItem" title="Food item" id="C1F-Kf-Sbh" customClass="NewFoodItemTableViewController" customModule="Foodini" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="9IJ-v5-2bO">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
...
                                            <rect key="frame" x="529" y="8" width="63" height="33"/>
                                            <color key="backgroundColor" red="0.89019607840000003" green="0.89019607840000003" blue="0.89019607840000003" alpha="1" colorSpace="calibratedRGB"/>
                                            <state key="normal" title="Add"/>
                                            <connections>
                                                <action selector="add:" destination="DZs-7z-rtz" eventType="touchUpInside" id="Qnf-ZE-Sfq"/>
...
                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                            <color key="backgroundColor" red="0.89019607840000003" green="0.89019607840000003" blue="0.89019607840000003" alpha="1" colorSpace="calibratedRGB"/>
                            <state key="normal" title="Cancel">
                                <color key="titleColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                            </state>
...
