...

class HomeViewController: UIViewController, NewOrderViewDelegate {
    
    func cancelNewOrder(newOrderVC: NewOrderViewController) {
        if !newOrderVC.order.isEmpty() {
            let refreshAlert = UIAlertController(title: "Cancel", message: "Are you sure you want to cancel this order?", preferredStyle: UIAlertControllerStyle.ActionSheet)
            refreshAlert.addAction(UIAlertAction(title: "Yes", style: .Destructive, handler: { (action: UIAlertAction!) in
                newOrderVC.navigationController?.popViewControllerAnimated(true)
            }))
            refreshAlert.addAction(UIAlertAction(title: "No", style: .Cancel, handler: nil))
            presentViewController(refreshAlert, animated: true, completion: nil)
        } else {
            newOrderVC.navigationController?.popViewControllerAnimated(true)
        }
    }
    
...
