...
            driverRestaurantDelegate.prefs.availability!.expirationDate = getActualTimeFromNow()
            
            let selectedHoursString = timePickerData[0][timePicker.selectedRowInComponent(0)]
            let selectedMinutesString = timePickerData[1][timePicker.selectedRowInComponent(1)]
            let time = selectedHoursString + " " + selectedMinutesString
            
            if selectedHoursString != "0 hours" || selectedMinutesString != "0 minutes" {
                driverRestaurantDelegate.prefs.selectedExpirationTime = time
                driverRestaurantDelegate.tableView.reloadRowsAtIndexPaths([NSIndexPath(forRow: 1, inSection: 0),
                    NSIndexPath(forRow: 0, inSection: 0)],
                    withRowAnimation: .None)
            }
        }
...
